# ConceptualEngine

./: .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Resources/Assets/Materials/: MI_default_red.json  MM_default.json  MM_glitch.json  MM_solidDefault.json
Engine/Resources/Assets/Shaders/Basic/: DefaultShader.frag  Glitch.frag  Glitch.vert  Textured.frag
Engine/Source/Core/: AssetManager.cpp  Engine.cpp  Renderer.cpp  Rendering.cpp  Shader.cpp  Texture.cpp
Engine/Source/Core/Assets/: Material.cpp  MaterialAsset.cpp  Shader.cpp  Texture.cpp
Engine/include/Core/: AssetManager.h  Engine.h  Renderer.h  Rendering.h  Shader.h  Texture.h
Engine/include/Core/Assets/: Asset.h  Material.h  MaterialAsset.h  Shader.h  Texture.h
Game/: CMakeLists.txt
Game/Source/: Main.cpp
libraries/glad/include/glad/: gl.h
libraries/glad/src/: gl.c
